# calculator-mcp

./: Cargo.toml  LICENSE  Makefile
.github/: copilot-instructions.md
src/: lib.rs  main.rs
src/app_config/: mod.rs
src/evaluator/: mod.rs
src/evaluator/models/: math_const.rs  mod.rs  operator.rs  token.rs
src/http_server/: mod.rs
src/tokenizer/: mod.rs  models.rs
src/tokenizer/models/: assoc.rs  math_const.rs  mod.rs  operator.rs  token.rs
