[package]
name = "calculator-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bigdecimal = { version = "0.4.9", features = ["serde-json"] }
num-traits = "0.2"
variantly = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
config = "0.14"

[dev-dependencies]
serial_test = "3.0"
