[package]
name = "calculator-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bigdecimal = { version = "0.4.9", features = ["serde-json"] }
num-traits = "0.2"
variantly = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
config = "0.15.19"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit", "buffer", "timeout"] }
tower-http = { version = "0.6.7", features = ["cors", "trace", "catch-panic", "limit", "util", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "3.2.0"
